docker/proyectolinas/proyectos/kubernetes/kubernetes/namespacelinas.yml
apiVersion: v1
kind: Namespace
metadata:
  name: linas-api
  labels:
    app: linas-api
    autor: linas
