docker/proyectolinas/proyectos/kubernetes/kubernetes/deploynestapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestapi-deployment
  namespace: linas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestapi
  template:
    metadata:
      labels:
        app: nestapi
    spec:
      containers:
        - name: nestapi
          image: mortviva7/ubnest:latest
          ports:
            - containerPort: 3001
