docker/proyectolinas/proyectos/kubernetes/kubernetes/deploypostgre.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
  namespace: linas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: mortviva7/ubpostgre:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgre-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgre-storage
          persistentVolumeClaim:
            claimName: postgre-pvc
