docker/proyectolinas/proyectos/kubernetes/kubernetes/servicenestapi.yml
apiVersion: v1
kind: Service
metadata:
  name: nestapi-service
  namespace: linas-api
spec:
  selector:
    app: nestapi
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001
  type: NodePort
