docker/proyectolinas/proyectos/kubernetes/kubernetes/servicepostgre.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: linas-api
spec:
  selector:
    app: postgre
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
