docker/proyectolinas/proyectos/kubernetes/kubernetes/ingressnestapi.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestapi-ingress
  namespace: linas-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.linas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestapi-service
                port:
                  number: 3001
